fix: add 0 to green color token names

--- a/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
@@ -166,81 +166,9 @@ $sd-sage-color-base-blue-95-code: "blue-95";
 ///
 $sd-sage-color-base-blue-95-classname: "t-sage--color-blue-95";
 ///
-/// color color-base-green-5-hex
-///
-$sd-sage-color-base-green-5-hex: #fbfefc;
-///
-/// color color-base-green-5-code
-///
-$sd-sage-color-base-green-5-code: "green-5";
-///
-/// color color-base-green-5-classname
-///
-$sd-sage-color-base-green-5-classname: "t-sage--color-green-5";
-///
-/// color color-base-green-10-hex
-///
-$sd-sage-color-base-green-10-hex: #edfcf2;
-///
-/// color color-base-green-10-code
-///
-$sd-sage-color-base-green-10-code: "green-10";
-///
-/// color color-base-green-10-classname
-///
-$sd-sage-color-base-green-10-classname: "t-sage--color-green-10";
-///
-/// color color-base-green-15-hex
-///
-$sd-sage-color-base-green-15-hex: #d3f8df;
-///
-/// color color-base-green-15-code
-///
-$sd-sage-color-base-green-15-code: "green-15";
-///
-/// color color-base-green-15-classname
-///
-$sd-sage-color-base-green-15-classname: "t-sage--color-green-15";
-///
-/// color color-base-green-20-hex
-///
-$sd-sage-color-base-green-20-hex: #aaf0c4;
-///
-/// color color-base-green-20-code
-///
-$sd-sage-color-base-green-20-code: "green-20";
-///
-/// color color-base-green-20-classname
-///
-$sd-sage-color-base-green-20-classname: "t-sage--color-green-20";
-///
-/// color color-base-green-30-hex
-///
-$sd-sage-color-base-green-30-hex: #73e2a3;
-///
-/// color color-base-green-30-code
-///
-$sd-sage-color-base-green-30-code: "green-30";
-///
-/// color color-base-green-30-classname
-///
-$sd-sage-color-base-green-30-classname: "t-sage--color-green-30";
-///
-/// color color-base-green-40-hex
-///
-$sd-sage-color-base-green-40-hex: #3dcb7f;
-///
-/// color color-base-green-40-code
-///
-$sd-sage-color-base-green-40-code: "green-40";
-///
-/// color color-base-green-40-classname
-///
-$sd-sage-color-base-green-40-classname: "t-sage--color-green-40";
-///
 /// color color-base-green-50-hex
 ///
-$sd-sage-color-base-green-50-hex: #17b365;
+$sd-sage-color-base-green-50-hex: #fbfefc;
 ///
 /// color color-base-green-50-code
 ///
@@ -250,65 +178,137 @@ $sd-sage-color-base-green-50-code: "green-50";
 ///
 $sd-sage-color-base-green-50-classname: "t-sage--color-green-50";
 ///
-/// color color-base-green-60-hex
+/// color color-base-green-100-hex
 ///
-$sd-sage-color-base-green-60-hex: #079250;
+$sd-sage-color-base-green-100-hex: #edfcf2;
 ///
-/// color color-base-green-60-code
+/// color color-base-green-100-code
 ///
-$sd-sage-color-base-green-60-code: "green-60";
+$sd-sage-color-base-green-100-code: "green-100";
 ///
-/// color color-base-green-60-classname
+/// color color-base-green-100-classname
 ///
-$sd-sage-color-base-green-60-classname: "t-sage--color-green-60";
+$sd-sage-color-base-green-100-classname: "t-sage--color-green-100";
 ///
-/// color color-base-green-70-hex
+/// color color-base-green-150-hex
 ///
-$sd-sage-color-base-green-70-hex: #097443;
+$sd-sage-color-base-green-150-hex: #d3f8df;
 ///
-/// color color-base-green-70-code
+/// color color-base-green-150-code
 ///
-$sd-sage-color-base-green-70-code: "green-70";
+$sd-sage-color-base-green-150-code: "green-150";
 ///
-/// color color-base-green-70-classname
+/// color color-base-green-150-classname
 ///
-$sd-sage-color-base-green-70-classname: "t-sage--color-green-70";
+$sd-sage-color-base-green-150-classname: "t-sage--color-green-150";
 ///
-/// color color-base-green-80-hex
+/// color color-base-green-200-hex
 ///
-$sd-sage-color-base-green-80-hex: #085c37;
+$sd-sage-color-base-green-200-hex: #aaf0c4;
 ///
-/// color color-base-green-80-code
+/// color color-base-green-200-code
 ///
-$sd-sage-color-base-green-80-code: "green-80";
+$sd-sage-color-base-green-200-code: "green-200";
 ///
-/// color color-base-green-80-classname
+/// color color-base-green-200-classname
 ///
-$sd-sage-color-base-green-80-classname: "t-sage--color-green-80";
+$sd-sage-color-base-green-200-classname: "t-sage--color-green-200";
 ///
-/// color color-base-green-90-hex
+/// color color-base-green-300-hex
 ///
-$sd-sage-color-base-green-90-hex: #094c2f;
+$sd-sage-color-base-green-300-hex: #73e2a3;
 ///
-/// color color-base-green-90-code
+/// color color-base-green-300-code
 ///
-$sd-sage-color-base-green-90-code: "green-90";
+$sd-sage-color-base-green-300-code: "green-300";
 ///
-/// color color-base-green-90-classname
+/// color color-base-green-300-classname
 ///
-$sd-sage-color-base-green-90-classname: "t-sage--color-green-90";
+$sd-sage-color-base-green-300-classname: "t-sage--color-green-300";
 ///
-/// color color-base-green-95-hex
+/// color color-base-green-400-hex
 ///
-$sd-sage-color-base-green-95-hex: #052e1c;
+$sd-sage-color-base-green-400-hex: #3dcb7f;
 ///
-/// color color-base-green-95-code
+/// color color-base-green-400-code
 ///
-$sd-sage-color-base-green-95-code: "green-95";
+$sd-sage-color-base-green-400-code: "green-400";
 ///
-/// color color-base-green-95-classname
+/// color color-base-green-400-classname
 ///
-$sd-sage-color-base-green-95-classname: "t-sage--color-green-95";
+$sd-sage-color-base-green-400-classname: "t-sage--color-green-400";
+///
+/// color color-base-green-500-hex
+///
+$sd-sage-color-base-green-500-hex: #17b365;
+///
+/// color color-base-green-500-code
+///
+$sd-sage-color-base-green-500-code: "green-500";
+///
+/// color color-base-green-500-classname
+///
+$sd-sage-color-base-green-500-classname: "t-sage--color-green-500";
+///
+/// color color-base-green-600-hex
+///
+$sd-sage-color-base-green-600-hex: #079250;
+///
+/// color color-base-green-600-code
+///
+$sd-sage-color-base-green-600-code: "green-600";
+///
+/// color color-base-green-600-classname
+///
+$sd-sage-color-base-green-600-classname: "t-sage--color-green-600";
+///
+/// color color-base-green-700-hex
+///
+$sd-sage-color-base-green-700-hex: #097443;
+///
+/// color color-base-green-700-code
+///
+$sd-sage-color-base-green-700-code: "green-700";
+///
+/// color color-base-green-700-classname
+///
+$sd-sage-color-base-green-700-classname: "t-sage--color-green-700";
+///
+/// color color-base-green-800-hex
+///
+$sd-sage-color-base-green-800-hex: #085c37;
+///
+/// color color-base-green-800-code
+///
+$sd-sage-color-base-green-800-code: "green-800";
+///
+/// color color-base-green-800-classname
+///
+$sd-sage-color-base-green-800-classname: "t-sage--color-green-800";
+///
+/// color color-base-green-900-hex
+///
+$sd-sage-color-base-green-900-hex: #094c2f;
+///
+/// color color-base-green-900-code
+///
+$sd-sage-color-base-green-900-code: "green-900";
+///
+/// color color-base-green-900-classname
+///
+$sd-sage-color-base-green-900-classname: "t-sage--color-green-900";
+///
+/// color color-base-green-950-hex
+///
+$sd-sage-color-base-green-950-hex: #052e1c;
+///
+/// color color-base-green-950-code
+///
+$sd-sage-color-base-green-950-code: "green-950";
+///
+/// color color-base-green-950-classname
+///
+$sd-sage-color-base-green-950-classname: "t-sage--color-green-950";
 ///
 /// color color-base-mercury-5-hex
 ///
@@ -784,11 +784,11 @@ $sd-sage-color-base-red-50-hex: #fffafa;
 ///
 /// color color-base-red-50-code
 ///
-$sd-sage-color-base-red-50-code: "red-5";
+$sd-sage-color-base-red-50-code: "red-50";
 ///
 /// color color-base-red-50-classname
 ///
-$sd-sage-color-base-red-50-classname: "t-sage--color-red-5";
+$sd-sage-color-base-red-50-classname: "t-sage--color-red-50";
 ///
 /// color color-base-red-100-hex
 ///
@@ -796,7 +796,7 @@ $sd-sage-color-base-red-100-hex: #fef2f2;
 ///
 /// color color-base-red-100-code
 ///
-$sd-sage-color-base-red-100-code: "red-10";
+$sd-sage-color-base-red-100-code: "red-100";
 ///
 /// color color-base-red-100-classname
 ///
@@ -808,7 +808,7 @@ $sd-sage-color-base-red-150-hex: #fee2e1;
 ///
 /// color color-base-red-150-code
 ///
-$sd-sage-color-base-red-150-code: "red-15";
+$sd-sage-color-base-red-150-code: "red-150";
 ///
 /// color color-base-red-150-classname
 ///
@@ -820,7 +820,7 @@ $sd-sage-color-base-red-200-hex: #fecaca;
 ///
 /// color color-base-red-200-code
 ///
-$sd-sage-color-base-red-200-code: "red-20";
+$sd-sage-color-base-red-200-code: "red-200";
 ///
 /// color color-base-red-200-classname
 ///
@@ -832,7 +832,7 @@ $sd-sage-color-base-red-300-hex: #fda5a5;
 ///
 /// color color-base-red-300-code
 ///
-$sd-sage-color-base-red-300-code: "red-30";
+$sd-sage-color-base-red-300-code: "red-300";
 ///
 /// color color-base-red-300-classname
 ///
@@ -844,7 +844,7 @@ $sd-sage-color-base-red-400-hex: #f87171;
 ///
 /// color color-base-red-400-code
 ///
-$sd-sage-color-base-red-400-code: "red-40";
+$sd-sage-color-base-red-400-code: "red-400";
 ///
 /// color color-base-red-400-classname
 ///
@@ -856,7 +856,7 @@ $sd-sage-color-base-red-500-hex: #ef4444;
 ///
 /// color color-base-red-500-code
 ///
-$sd-sage-color-base-red-500-code: "red-50";
+$sd-sage-color-base-red-500-code: "red-500";
 ///
 /// color color-base-red-500-classname
 ///
@@ -868,7 +868,7 @@ $sd-sage-color-base-red-600-hex: #dc2625;
 ///
 /// color color-base-red-600-code
 ///
-$sd-sage-color-base-red-600-code: "red-60";
+$sd-sage-color-base-red-600-code: "red-600";
 ///
 /// color color-base-red-600-classname
 ///
@@ -880,7 +880,7 @@ $sd-sage-color-base-red-700-hex: #b91c1b;
 ///
 /// color color-base-red-700-code
 ///
-$sd-sage-color-base-red-700-code: "red-70";
+$sd-sage-color-base-red-700-code: "red-700";
 ///
 /// color color-base-red-700-classname
 ///
@@ -892,7 +892,7 @@ $sd-sage-color-base-red-800-hex: #991b1b;
 ///
 /// color color-base-red-800-code
 ///
-$sd-sage-color-base-red-800-code: "red-80";
+$sd-sage-color-base-red-800-code: "red-800";
 ///
 /// color color-base-red-800-classname
 ///
@@ -904,7 +904,7 @@ $sd-sage-color-base-red-900-hex: #7f1c1d;
 ///
 /// color color-base-red-900-code
 ///
-$sd-sage-color-base-red-900-code: "red-90";
+$sd-sage-color-base-red-900-code: "red-900";
 ///
 /// color color-base-red-900-classname
 ///
@@ -916,7 +916,7 @@ $sd-sage-color-base-red-950-hex: #572627;
 ///
 /// color color-base-red-950-code
 ///
-$sd-sage-color-base-red-950-code: "red-95";
+$sd-sage-color-base-red-950-code: "red-950";
 ///
 /// color color-base-red-950-classname
 ///
@@ -1637,65 +1637,65 @@ $sd-sage-color: (
     ),
   ),
   green: (
-    5: (
-      hex: $sd-sage-color-base-green-5-hex,
-      code: $sd-sage-color-base-green-5-code,
-      classname: $sd-sage-color-base-green-5-classname,
-    ),
-    10: (
-      hex: $sd-sage-color-base-green-10-hex,
-      code: $sd-sage-color-base-green-10-code,
-      classname: $sd-sage-color-base-green-10-classname,
-    ),
-    15: (
-      hex: $sd-sage-color-base-green-15-hex,
-      code: $sd-sage-color-base-green-15-code,
-      classname: $sd-sage-color-base-green-15-classname,
-    ),
-    20: (
-      hex: $sd-sage-color-base-green-20-hex,
-      code: $sd-sage-color-base-green-20-code,
-      classname: $sd-sage-color-base-green-20-classname,
-    ),
-    30: (
-      hex: $sd-sage-color-base-green-30-hex,
-      code: $sd-sage-color-base-green-30-code,
-      classname: $sd-sage-color-base-green-30-classname,
-    ),
-    40: (
-      hex: $sd-sage-color-base-green-40-hex,
-      code: $sd-sage-color-base-green-40-code,
-      classname: $sd-sage-color-base-green-40-classname,
-    ),
     50: (
       hex: $sd-sage-color-base-green-50-hex,
       code: $sd-sage-color-base-green-50-code,
       classname: $sd-sage-color-base-green-50-classname,
     ),
-    60: (
-      hex: $sd-sage-color-base-green-60-hex,
-      code: $sd-sage-color-base-green-60-code,
-      classname: $sd-sage-color-base-green-60-classname,
+    100: (
+      hex: $sd-sage-color-base-green-100-hex,
+      code: $sd-sage-color-base-green-100-code,
+      classname: $sd-sage-color-base-green-100-classname,
     ),
-    70: (
-      hex: $sd-sage-color-base-green-70-hex,
-      code: $sd-sage-color-base-green-70-code,
-      classname: $sd-sage-color-base-green-70-classname,
+    150: (
+      hex: $sd-sage-color-base-green-150-hex,
+      code: $sd-sage-color-base-green-150-code,
+      classname: $sd-sage-color-base-green-150-classname,
     ),
-    80: (
-      hex: $sd-sage-color-base-green-80-hex,
-      code: $sd-sage-color-base-green-80-code,
-      classname: $sd-sage-color-base-green-80-classname,
+    200: (
+      hex: $sd-sage-color-base-green-200-hex,
+      code: $sd-sage-color-base-green-200-code,
+      classname: $sd-sage-color-base-green-200-classname,
     ),
-    90: (
-      hex: $sd-sage-color-base-green-90-hex,
-      code: $sd-sage-color-base-green-90-code,
-      classname: $sd-sage-color-base-green-90-classname,
+    300: (
+      hex: $sd-sage-color-base-green-300-hex,
+      code: $sd-sage-color-base-green-300-code,
+      classname: $sd-sage-color-base-green-300-classname,
     ),
-    95: (
-      hex: $sd-sage-color-base-green-95-hex,
-      code: $sd-sage-color-base-green-95-code,
-      classname: $sd-sage-color-base-green-95-classname,
+    400: (
+      hex: $sd-sage-color-base-green-400-hex,
+      code: $sd-sage-color-base-green-400-code,
+      classname: $sd-sage-color-base-green-400-classname,
+    ),
+    500: (
+      hex: $sd-sage-color-base-green-500-hex,
+      code: $sd-sage-color-base-green-500-code,
+      classname: $sd-sage-color-base-green-500-classname,
+    ),
+    600: (
+      hex: $sd-sage-color-base-green-600-hex,
+      code: $sd-sage-color-base-green-600-code,
+      classname: $sd-sage-color-base-green-600-classname,
+    ),
+    700: (
+      hex: $sd-sage-color-base-green-700-hex,
+      code: $sd-sage-color-base-green-700-code,
+      classname: $sd-sage-color-base-green-700-classname,
+    ),
+    800: (
+      hex: $sd-sage-color-base-green-800-hex,
+      code: $sd-sage-color-base-green-800-code,
+      classname: $sd-sage-color-base-green-800-classname,
+    ),
+    900: (
+      hex: $sd-sage-color-base-green-900-hex,
+      code: $sd-sage-color-base-green-900-code,
+      classname: $sd-sage-color-base-green-900-classname,
+    ),
+    950: (
+      hex: $sd-sage-color-base-green-950-hex,
+      code: $sd-sage-color-base-green-950-code,
+      classname: $sd-sage-color-base-green-950-classname,
     ),
   ),
   mercury: (
@@ -2727,7 +2727,7 @@ $sd-sage-color-core-yellow: #fdbb21;
 ///
 /// color core color-core-red
 ///
-$sd-sage-color-core-red: #fffafa;
+$sd-sage-color-core-red: #ef4444;
 ///
 /// color core color-core-orange
 ///
