fix: add 0 to yellow color token names

--- a/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
@@ -574,81 +574,9 @@ $sd-sage-color-base-sage-500-code: "sage-500";
 ///
 $sd-sage-color-base-sage-500-classname: "t-sage--color-sage-500";
 ///
-/// color color-base-yellow-5-hex
-///
-$sd-sage-color-base-yellow-5-hex: #fffefa;
-///
-/// color color-base-yellow-5-code
-///
-$sd-sage-color-base-yellow-5-code: "yellow-5";
-///
-/// color color-base-yellow-5-classname
-///
-$sd-sage-color-base-yellow-5-classname: "t-sage--color-yellow-5";
-///
-/// color color-base-yellow-10-hex
-///
-$sd-sage-color-base-yellow-10-hex: #fffbeb;
-///
-/// color color-base-yellow-10-code
-///
-$sd-sage-color-base-yellow-10-code: "yellow-10";
-///
-/// color color-base-yellow-10-classname
-///
-$sd-sage-color-base-yellow-10-classname: "t-sage--color-yellow-10";
-///
-/// color color-base-yellow-15-hex
-///
-$sd-sage-color-base-yellow-15-hex: #fff3c6;
-///
-/// color color-base-yellow-15-code
-///
-$sd-sage-color-base-yellow-15-code: "yellow-15";
-///
-/// color color-base-yellow-15-classname
-///
-$sd-sage-color-base-yellow-15-classname: "t-sage--color-yellow-15";
-///
-/// color color-base-yellow-20-hex
-///
-$sd-sage-color-base-yellow-20-hex: #fee589;
-///
-/// color color-base-yellow-20-code
-///
-$sd-sage-color-base-yellow-20-code: "yellow-20";
-///
-/// color color-base-yellow-20-classname
-///
-$sd-sage-color-base-yellow-20-classname: "t-sage--color-yellow-20";
-///
-/// color color-base-yellow-30-hex
-///
-$sd-sage-color-base-yellow-30-hex: #fed04b;
-///
-/// color color-base-yellow-30-code
-///
-$sd-sage-color-base-yellow-30-code: "yellow-30";
-///
-/// color color-base-yellow-30-classname
-///
-$sd-sage-color-base-yellow-30-classname: "t-sage--color-yellow-30";
-///
-/// color color-base-yellow-40-hex
-///
-$sd-sage-color-base-yellow-40-hex: #fdbb21;
-///
-/// color color-base-yellow-40-code
-///
-$sd-sage-color-base-yellow-40-code: "yellow-40";
-///
-/// color color-base-yellow-40-classname
-///
-$sd-sage-color-base-yellow-40-classname: "t-sage--color-yellow-40";
-///
 /// color color-base-yellow-50-hex
 ///
-$sd-sage-color-base-yellow-50-hex: #f79a0b;
+$sd-sage-color-base-yellow-50-hex: #fffefa;
 ///
 /// color color-base-yellow-50-code
 ///
@@ -658,69 +586,9 @@ $sd-sage-color-base-yellow-50-code: "yellow-50";
 ///
 $sd-sage-color-base-yellow-50-classname: "t-sage--color-yellow-50";
 ///
-/// color color-base-yellow-60-hex
-///
-$sd-sage-color-base-yellow-60-hex: #db7303;
-///
-/// color color-base-yellow-60-code
-///
-$sd-sage-color-base-yellow-60-code: "yellow-60";
-///
-/// color color-base-yellow-60-classname
-///
-$sd-sage-color-base-yellow-60-classname: "t-sage--color-yellow-60";
-///
-/// color color-base-yellow-70-hex
-///
-$sd-sage-color-base-yellow-70-hex: #b64f06;
-///
-/// color color-base-yellow-70-code
-///
-$sd-sage-color-base-yellow-70-code: "yellow-70";
-///
-/// color color-base-yellow-70-classname
-///
-$sd-sage-color-base-yellow-70-classname: "t-sage--color-yellow-70";
-///
-/// color color-base-yellow-80-hex
-///
-$sd-sage-color-base-yellow-80-hex: #943d0e;
-///
-/// color color-base-yellow-80-code
-///
-$sd-sage-color-base-yellow-80-code: "yellow-80";
-///
-/// color color-base-yellow-80-classname
-///
-$sd-sage-color-base-yellow-80-classname: "t-sage--color-yellow-80";
-///
-/// color color-base-yellow-90-hex
-///
-$sd-sage-color-base-yellow-90-hex: #79330e;
-///
-/// color color-base-yellow-90-code
-///
-$sd-sage-color-base-yellow-90-code: "yellow-90";
-///
-/// color color-base-yellow-90-classname
-///
-$sd-sage-color-base-yellow-90-classname: "t-sage--color-yellow-90";
-///
-/// color color-base-yellow-95-hex
-///
-$sd-sage-color-base-yellow-95-hex: #451902;
-///
-/// color color-base-yellow-95-code
-///
-$sd-sage-color-base-yellow-95-code: "yellow-95";
-///
-/// color color-base-yellow-95-classname
-///
-$sd-sage-color-base-yellow-95-classname: "t-sage--color-yellow-95";
-///
 /// color color-base-yellow-100-hex
 ///
-$sd-sage-color-base-yellow-100-hex: #fff3c6;
+$sd-sage-color-base-yellow-100-hex: #fffbeb;
 ///
 /// color color-base-yellow-100-code
 ///
@@ -730,9 +598,21 @@ $sd-sage-color-base-yellow-100-code: "yellow-100";
 ///
 $sd-sage-color-base-yellow-100-classname: "t-sage--color-yellow-100";
 ///
+/// color color-base-yellow-150-hex
+///
+$sd-sage-color-base-yellow-150-hex: #fff3c6;
+///
+/// color color-base-yellow-150-code
+///
+$sd-sage-color-base-yellow-150-code: "yellow-150";
+///
+/// color color-base-yellow-150-classname
+///
+$sd-sage-color-base-yellow-150-classname: "t-sage--color-yellow-150";
+///
 /// color color-base-yellow-200-hex
 ///
-$sd-sage-color-base-yellow-200-hex: #fed04b;
+$sd-sage-color-base-yellow-200-hex: #fee589;
 ///
 /// color color-base-yellow-200-code
 ///
@@ -744,7 +624,7 @@ $sd-sage-color-base-yellow-200-classname: "t-sage--color-yellow-200";
 ///
 /// color color-base-yellow-300-hex
 ///
-$sd-sage-color-base-yellow-300-hex: #fdbb21;
+$sd-sage-color-base-yellow-300-hex: #fed04b;
 ///
 /// color color-base-yellow-300-code
 ///
@@ -756,7 +636,7 @@ $sd-sage-color-base-yellow-300-classname: "t-sage--color-yellow-300";
 ///
 /// color color-base-yellow-400-hex
 ///
-$sd-sage-color-base-yellow-400-hex: #db7303;
+$sd-sage-color-base-yellow-400-hex: #fdbb21;
 ///
 /// color color-base-yellow-400-code
 ///
@@ -768,7 +648,7 @@ $sd-sage-color-base-yellow-400-classname: "t-sage--color-yellow-400";
 ///
 /// color color-base-yellow-500-hex
 ///
-$sd-sage-color-base-yellow-500-hex: #451902;
+$sd-sage-color-base-yellow-500-hex: #f79a0b;
 ///
 /// color color-base-yellow-500-code
 ///
@@ -777,6 +657,66 @@ $sd-sage-color-base-yellow-500-code: "yellow-500";
 /// color color-base-yellow-500-classname
 ///
 $sd-sage-color-base-yellow-500-classname: "t-sage--color-yellow-500";
+///
+/// color color-base-yellow-600-hex
+///
+$sd-sage-color-base-yellow-600-hex: #db7303;
+///
+/// color color-base-yellow-600-code
+///
+$sd-sage-color-base-yellow-600-code: "yellow-60";
+///
+/// color color-base-yellow-600-classname
+///
+$sd-sage-color-base-yellow-600-classname: "t-sage--color-yellow-600";
+///
+/// color color-base-yellow-700-hex
+///
+$sd-sage-color-base-yellow-700-hex: #b64f06;
+///
+/// color color-base-yellow-700-code
+///
+$sd-sage-color-base-yellow-700-code: "yellow-700";
+///
+/// color color-base-yellow-700-classname
+///
+$sd-sage-color-base-yellow-700-classname: "t-sage--color-yellow-700";
+///
+/// color color-base-yellow-800-hex
+///
+$sd-sage-color-base-yellow-800-hex: #943d0e;
+///
+/// color color-base-yellow-800-code
+///
+$sd-sage-color-base-yellow-800-code: "yellow-800";
+///
+/// color color-base-yellow-800-classname
+///
+$sd-sage-color-base-yellow-800-classname: "t-sage--color-yellow-800";
+///
+/// color color-base-yellow-900-hex
+///
+$sd-sage-color-base-yellow-900-hex: #79330e;
+///
+/// color color-base-yellow-900-code
+///
+$sd-sage-color-base-yellow-900-code: "yellow-900";
+///
+/// color color-base-yellow-900-classname
+///
+$sd-sage-color-base-yellow-900-classname: "t-sage--color-yellow-900";
+///
+/// color color-base-yellow-950-hex
+///
+$sd-sage-color-base-yellow-950-hex: #451902;
+///
+/// color color-base-yellow-950-code
+///
+$sd-sage-color-base-yellow-950-code: "yellow-950";
+///
+/// color color-base-yellow-950-classname
+///
+$sd-sage-color-base-yellow-950-classname: "t-sage--color-yellow-950";
 ///
 /// color color-base-red-50-hex
 ///
@@ -1815,70 +1755,20 @@ $sd-sage-color: (
     ),
   ),
   yellow: (
-    5: (
-      hex: $sd-sage-color-base-yellow-5-hex,
-      code: $sd-sage-color-base-yellow-5-code,
-      classname: $sd-sage-color-base-yellow-5-classname,
-    ),
-    10: (
-      hex: $sd-sage-color-base-yellow-10-hex,
-      code: $sd-sage-color-base-yellow-10-code,
-      classname: $sd-sage-color-base-yellow-10-classname,
-    ),
-    15: (
-      hex: $sd-sage-color-base-yellow-15-hex,
-      code: $sd-sage-color-base-yellow-15-code,
-      classname: $sd-sage-color-base-yellow-15-classname,
-    ),
-    20: (
-      hex: $sd-sage-color-base-yellow-20-hex,
-      code: $sd-sage-color-base-yellow-20-code,
-      classname: $sd-sage-color-base-yellow-20-classname,
-    ),
-    30: (
-      hex: $sd-sage-color-base-yellow-30-hex,
-      code: $sd-sage-color-base-yellow-30-code,
-      classname: $sd-sage-color-base-yellow-30-classname,
-    ),
-    40: (
-      hex: $sd-sage-color-base-yellow-40-hex,
-      code: $sd-sage-color-base-yellow-40-code,
-      classname: $sd-sage-color-base-yellow-40-classname,
-    ),
     50: (
       hex: $sd-sage-color-base-yellow-50-hex,
       code: $sd-sage-color-base-yellow-50-code,
       classname: $sd-sage-color-base-yellow-50-classname,
     ),
-    60: (
-      hex: $sd-sage-color-base-yellow-60-hex,
-      code: $sd-sage-color-base-yellow-60-code,
-      classname: $sd-sage-color-base-yellow-60-classname,
-    ),
-    70: (
-      hex: $sd-sage-color-base-yellow-70-hex,
-      code: $sd-sage-color-base-yellow-70-code,
-      classname: $sd-sage-color-base-yellow-70-classname,
-    ),
-    80: (
-      hex: $sd-sage-color-base-yellow-80-hex,
-      code: $sd-sage-color-base-yellow-80-code,
-      classname: $sd-sage-color-base-yellow-80-classname,
-    ),
-    90: (
-      hex: $sd-sage-color-base-yellow-90-hex,
-      code: $sd-sage-color-base-yellow-90-code,
-      classname: $sd-sage-color-base-yellow-90-classname,
-    ),
-    95: (
-      hex: $sd-sage-color-base-yellow-95-hex,
-      code: $sd-sage-color-base-yellow-95-code,
-      classname: $sd-sage-color-base-yellow-95-classname,
-    ),
     100: (
       hex: $sd-sage-color-base-yellow-100-hex,
       code: $sd-sage-color-base-yellow-100-code,
       classname: $sd-sage-color-base-yellow-100-classname,
+    ),
+    150: (
+      hex: $sd-sage-color-base-yellow-150-hex,
+      code: $sd-sage-color-base-yellow-150-code,
+      classname: $sd-sage-color-base-yellow-150-classname,
     ),
     200: (
       hex: $sd-sage-color-base-yellow-200-hex,
@@ -1899,6 +1789,31 @@ $sd-sage-color: (
       hex: $sd-sage-color-base-yellow-500-hex,
       code: $sd-sage-color-base-yellow-500-code,
       classname: $sd-sage-color-base-yellow-500-classname,
+    ),
+    600: (
+      hex: $sd-sage-color-base-yellow-600-hex,
+      code: $sd-sage-color-base-yellow-600-code,
+      classname: $sd-sage-color-base-yellow-600-classname,
+    ),
+    700: (
+      hex: $sd-sage-color-base-yellow-700-hex,
+      code: $sd-sage-color-base-yellow-700-code,
+      classname: $sd-sage-color-base-yellow-700-classname,
+    ),
+    800: (
+      hex: $sd-sage-color-base-yellow-800-hex,
+      code: $sd-sage-color-base-yellow-800-code,
+      classname: $sd-sage-color-base-yellow-800-classname,
+    ),
+    900: (
+      hex: $sd-sage-color-base-yellow-900-hex,
+      code: $sd-sage-color-base-yellow-900-code,
+      classname: $sd-sage-color-base-yellow-900-classname,
+    ),
+    950: (
+      hex: $sd-sage-color-base-yellow-950-hex,
+      code: $sd-sage-color-base-yellow-950-code,
+      classname: $sd-sage-color-base-yellow-950-classname,
     ),
   ),
   red: (
@@ -2711,7 +2626,7 @@ $sd-sage-color-core-green: #079250;
 ///
 /// color core color-core-mercury
 ///
-$sd-sage-color-core-mercury: #fffcfa;
+$sd-sage-color-core-mercury: #ff3e15;
 ///
 /// color core color-core-primary
 ///
