fix: add 0 to purple color token names

--- a/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
+++ b/packages/sage-assets/lib/stylesheets/dictionary/_tokens.scss
@@ -922,81 +922,9 @@ $sd-sage-color-base-orange-500-code: "orange-500";
 ///
 $sd-sage-color-base-orange-500-classname: "t-sage--color-orange-500";
 ///
-/// color color-base-purple-5-hex
-///
-$sd-sage-color-base-purple-5-hex: #fafbff;
-///
-/// color color-base-purple-5-code
-///
-$sd-sage-color-base-purple-5-code: "purple-5";
-///
-/// color color-base-purple-5-classname
-///
-$sd-sage-color-base-purple-5-classname: "t-sage--color-purple-5";
-///
-/// color color-base-purple-10-hex
-///
-$sd-sage-color-base-purple-10-hex: #edf1ff;
-///
-/// color color-base-purple-10-code
-///
-$sd-sage-color-base-purple-10-code: "purple-10";
-///
-/// color color-base-purple-10-classname
-///
-$sd-sage-color-base-purple-10-classname: "t-sage--color-purple-10";
-///
-/// color color-base-purple-15-hex
-///
-$sd-sage-color-base-purple-15-hex: #e0e4ff;
-///
-/// color color-base-purple-15-code
-///
-$sd-sage-color-base-purple-15-code: "purple-15";
-///
-/// color color-base-purple-15-classname
-///
-$sd-sage-color-base-purple-15-classname: "t-sage--color-purple-15";
-///
-/// color color-base-purple-20-hex
-///
-$sd-sage-color-base-purple-20-hex: #c7cdfe;
-///
-/// color color-base-purple-20-code
-///
-$sd-sage-color-base-purple-20-code: "purple-20";
-///
-/// color color-base-purple-20-classname
-///
-$sd-sage-color-base-purple-20-classname: "t-sage--color-purple-20";
-///
-/// color color-base-purple-30-hex
-///
-$sd-sage-color-base-purple-30-hex: #a3acfd;
-///
-/// color color-base-purple-30-code
-///
-$sd-sage-color-base-purple-30-code: "purple-30";
-///
-/// color color-base-purple-30-classname
-///
-$sd-sage-color-base-purple-30-classname: "t-sage--color-purple-30";
-///
-/// color color-base-purple-40-hex
-///
-$sd-sage-color-base-purple-40-hex: #8081f9;
-///
-/// color color-base-purple-40-code
-///
-$sd-sage-color-base-purple-40-code: "purple-40";
-///
-/// color color-base-purple-40-classname
-///
-$sd-sage-color-base-purple-40-classname: "t-sage--color-purple-40";
-///
 /// color color-base-purple-50-hex
 ///
-$sd-sage-color-base-purple-50-hex: #6a62f2;
+$sd-sage-color-base-purple-50-hex: #fafbff;
 ///
 /// color color-base-purple-50-code
 ///
@@ -1006,69 +934,9 @@ $sd-sage-color-base-purple-50-code: "purple-50";
 ///
 $sd-sage-color-base-purple-50-classname: "t-sage--color-purple-50";
 ///
-/// color color-base-purple-60-hex
-///
-$sd-sage-color-base-purple-60-hex: #533be5;
-///
-/// color color-base-purple-60-code
-///
-$sd-sage-color-base-purple-60-code: "purple-60";
-///
-/// color color-base-purple-60-classname
-///
-$sd-sage-color-base-purple-60-classname: "t-sage--color-purple-60";
-///
-/// color color-base-purple-70-hex
-///
-$sd-sage-color-base-purple-70-hex: #4f37cb;
-///
-/// color color-base-purple-70-code
-///
-$sd-sage-color-base-purple-70-code: "purple-70";
-///
-/// color color-base-purple-70-classname
-///
-$sd-sage-color-base-purple-70-classname: "t-sage--color-purple-70";
-///
-/// color color-base-purple-80-hex
-///
-$sd-sage-color-base-purple-80-hex: #402fa4;
-///
-/// color color-base-purple-80-code
-///
-$sd-sage-color-base-purple-80-code: "purple-80";
-///
-/// color color-base-purple-80-classname
-///
-$sd-sage-color-base-purple-80-classname: "t-sage--color-purple-80";
-///
-/// color color-base-purple-90-hex
-///
-$sd-sage-color-base-purple-90-hex: #372d82;
-///
-/// color color-base-purple-90-code
-///
-$sd-sage-color-base-purple-90-code: "purple-90";
-///
-/// color color-base-purple-90-classname
-///
-$sd-sage-color-base-purple-90-classname: "t-sage--color-purple-90";
-///
-/// color color-base-purple-95-hex
-///
-$sd-sage-color-base-purple-95-hex: #221b4b;
-///
-/// color color-base-purple-95-code
-///
-$sd-sage-color-base-purple-95-code: "purple-95";
-///
-/// color color-base-purple-95-classname
-///
-$sd-sage-color-base-purple-95-classname: "t-sage--color-purple-95";
-///
 /// color color-base-purple-100-hex
 ///
-$sd-sage-color-base-purple-100-hex: #e0e4ff;
+$sd-sage-color-base-purple-100-hex: #edf1ff;
 ///
 /// color color-base-purple-100-code
 ///
@@ -1078,9 +946,21 @@ $sd-sage-color-base-purple-100-code: "purple-100";
 ///
 $sd-sage-color-base-purple-100-classname: "t-sage--color-purple-100";
 ///
+/// color color-base-purple-150-hex
+///
+$sd-sage-color-base-purple-150-hex: #e0e4ff;
+///
+/// color color-base-purple-150-code
+///
+$sd-sage-color-base-purple-150-code: "purple-150";
+///
+/// color color-base-purple-150-classname
+///
+$sd-sage-color-base-purple-150-classname: "t-sage--color-purple-150";
+///
 /// color color-base-purple-200-hex
 ///
-$sd-sage-color-base-purple-200-hex: #a3acfd;
+$sd-sage-color-base-purple-200-hex: #c7cdfe;
 ///
 /// color color-base-purple-200-code
 ///
@@ -1092,7 +972,7 @@ $sd-sage-color-base-purple-200-classname: "t-sage--color-purple-200";
 ///
 /// color color-base-purple-300-hex
 ///
-$sd-sage-color-base-purple-300-hex: #533be5;
+$sd-sage-color-base-purple-300-hex: #a3acfd;
 ///
 /// color color-base-purple-300-code
 ///
@@ -1104,7 +984,7 @@ $sd-sage-color-base-purple-300-classname: "t-sage--color-purple-300";
 ///
 /// color color-base-purple-400-hex
 ///
-$sd-sage-color-base-purple-400-hex: #402fa4;
+$sd-sage-color-base-purple-400-hex: #8081f9;
 ///
 /// color color-base-purple-400-code
 ///
@@ -1116,7 +996,7 @@ $sd-sage-color-base-purple-400-classname: "t-sage--color-purple-400";
 ///
 /// color color-base-purple-500-hex
 ///
-$sd-sage-color-base-purple-500-hex: #221b4b;
+$sd-sage-color-base-purple-500-hex: #6a62f2;
 ///
 /// color color-base-purple-500-code
 ///
@@ -1125,6 +1005,66 @@ $sd-sage-color-base-purple-500-code: "purple-500";
 /// color color-base-purple-500-classname
 ///
 $sd-sage-color-base-purple-500-classname: "t-sage--color-purple-500";
+///
+/// color color-base-purple-600-hex
+///
+$sd-sage-color-base-purple-600-hex: #533be5;
+///
+/// color color-base-purple-600-code
+///
+$sd-sage-color-base-purple-600-code: "purple-600";
+///
+/// color color-base-purple-600-classname
+///
+$sd-sage-color-base-purple-600-classname: "t-sage--color-purple-600";
+///
+/// color color-base-purple-700-hex
+///
+$sd-sage-color-base-purple-700-hex: #4f37cb;
+///
+/// color color-base-purple-700-code
+///
+$sd-sage-color-base-purple-700-code: "purple-700";
+///
+/// color color-base-purple-700-classname
+///
+$sd-sage-color-base-purple-700-classname: "t-sage--color-purple-700";
+///
+/// color color-base-purple-800-hex
+///
+$sd-sage-color-base-purple-800-hex: #402fa4;
+///
+/// color color-base-purple-800-code
+///
+$sd-sage-color-base-purple-800-code: "purple-800";
+///
+/// color color-base-purple-800-classname
+///
+$sd-sage-color-base-purple-800-classname: "t-sage--color-purple-800";
+///
+/// color color-base-purple-900-hex
+///
+$sd-sage-color-base-purple-900-hex: #372d82;
+///
+/// color color-base-purple-900-code
+///
+$sd-sage-color-base-purple-900-code: "purple-900";
+///
+/// color color-base-purple-900-classname
+///
+$sd-sage-color-base-purple-900-classname: "t-sage--color-purple-900";
+///
+/// color color-base-purple-950-hex
+///
+$sd-sage-color-base-purple-950-hex: #221b4b;
+///
+/// color color-base-purple-950-code
+///
+$sd-sage-color-base-purple-950-code: "purple-950";
+///
+/// color color-base-purple-950-classname
+///
+$sd-sage-color-base-purple-950-classname: "t-sage--color-purple-950";
 ///
 /// color color-base-charcoal-100-hex
 ///
@@ -1906,70 +1846,20 @@ $sd-sage-color: (
     ),
   ),
   purple: (
-    5: (
-      hex: $sd-sage-color-base-purple-5-hex,
-      code: $sd-sage-color-base-purple-5-code,
-      classname: $sd-sage-color-base-purple-5-classname,
-    ),
-    10: (
-      hex: $sd-sage-color-base-purple-10-hex,
-      code: $sd-sage-color-base-purple-10-code,
-      classname: $sd-sage-color-base-purple-10-classname,
-    ),
-    15: (
-      hex: $sd-sage-color-base-purple-15-hex,
-      code: $sd-sage-color-base-purple-15-code,
-      classname: $sd-sage-color-base-purple-15-classname,
-    ),
-    20: (
-      hex: $sd-sage-color-base-purple-20-hex,
-      code: $sd-sage-color-base-purple-20-code,
-      classname: $sd-sage-color-base-purple-20-classname,
-    ),
-    30: (
-      hex: $sd-sage-color-base-purple-30-hex,
-      code: $sd-sage-color-base-purple-30-code,
-      classname: $sd-sage-color-base-purple-30-classname,
-    ),
-    40: (
-      hex: $sd-sage-color-base-purple-40-hex,
-      code: $sd-sage-color-base-purple-40-code,
-      classname: $sd-sage-color-base-purple-40-classname,
-    ),
     50: (
       hex: $sd-sage-color-base-purple-50-hex,
       code: $sd-sage-color-base-purple-50-code,
       classname: $sd-sage-color-base-purple-50-classname,
     ),
-    60: (
-      hex: $sd-sage-color-base-purple-60-hex,
-      code: $sd-sage-color-base-purple-60-code,
-      classname: $sd-sage-color-base-purple-60-classname,
-    ),
-    70: (
-      hex: $sd-sage-color-base-purple-70-hex,
-      code: $sd-sage-color-base-purple-70-code,
-      classname: $sd-sage-color-base-purple-70-classname,
-    ),
-    80: (
-      hex: $sd-sage-color-base-purple-80-hex,
-      code: $sd-sage-color-base-purple-80-code,
-      classname: $sd-sage-color-base-purple-80-classname,
-    ),
-    90: (
-      hex: $sd-sage-color-base-purple-90-hex,
-      code: $sd-sage-color-base-purple-90-code,
-      classname: $sd-sage-color-base-purple-90-classname,
-    ),
-    95: (
-      hex: $sd-sage-color-base-purple-95-hex,
-      code: $sd-sage-color-base-purple-95-code,
-      classname: $sd-sage-color-base-purple-95-classname,
-    ),
     100: (
       hex: $sd-sage-color-base-purple-100-hex,
       code: $sd-sage-color-base-purple-100-code,
       classname: $sd-sage-color-base-purple-100-classname,
+    ),
+    150: (
+      hex: $sd-sage-color-base-purple-150-hex,
+      code: $sd-sage-color-base-purple-150-code,
+      classname: $sd-sage-color-base-purple-150-classname,
     ),
     200: (
       hex: $sd-sage-color-base-purple-200-hex,
@@ -1990,6 +1880,31 @@ $sd-sage-color: (
       hex: $sd-sage-color-base-purple-500-hex,
       code: $sd-sage-color-base-purple-500-code,
       classname: $sd-sage-color-base-purple-500-classname,
+    ),
+    600: (
+      hex: $sd-sage-color-base-purple-600-hex,
+      code: $sd-sage-color-base-purple-600-code,
+      classname: $sd-sage-color-base-purple-600-classname,
+    ),
+    700: (
+      hex: $sd-sage-color-base-purple-700-hex,
+      code: $sd-sage-color-base-purple-700-code,
+      classname: $sd-sage-color-base-purple-700-classname,
+    ),
+    800: (
+      hex: $sd-sage-color-base-purple-800-hex,
+      code: $sd-sage-color-base-purple-800-code,
+      classname: $sd-sage-color-base-purple-800-classname,
+    ),
+    900: (
+      hex: $sd-sage-color-base-purple-900-hex,
+      code: $sd-sage-color-base-purple-900-code,
+      classname: $sd-sage-color-base-purple-900-classname,
+    ),
+    950: (
+      hex: $sd-sage-color-base-purple-950-hex,
+      code: $sd-sage-color-base-purple-950-code,
+      classname: $sd-sage-color-base-purple-950-classname,
     ),
   ),
   charcoal: (
